# RPG_Cocos2dx

./: CMakeLists.txt
Classes/: AppDelegate.cpp  HelloWorldScene.cpp  HelloWorldScene.h
Classes/Audio/: AudioEngine.cpp  AudioEngine.h
Classes/BaseCharacter/: BaseCharacter.h
Classes/Boss/: Boss.cpp  Boss.h
Classes/Character/: Character.cpp  Character.h
Classes/Character/Boss/: Boss.cpp  Boss.h  BossFactory.cpp  BossFactory.h  HellBeast.cpp  HellBeast.h
Classes/Character/Enemy/: Enemies.cpp  Enemies.h  EnemiesFactory.cpp  EnemiesFactory.h  ShadowLord.cpp  ShadowLord.h  Skeleton.cpp  Skeleton.h  Slime.cpp  Slime.h
Classes/Character/PlayerCharacter/: Fighter.cpp  Fighter.h  Knight.cpp  Knight.h  PlayerCharacter.cpp  PlayerCharacter.h  PlayerCharacterFactory.cpp  PlayerCharacterFactory.h  Warrior.cpp  Warrior.h
Classes/CharacterState/BossState/: BossAttack.cpp  BossDead.cpp  BossGetHit.cpp  BossIdle.cpp  BossRoar.cpp  BossRun.cpp  BossWalk.cpp
Classes/CharacterState/EnemiesState/: EnemiesAttack.cpp  EnemiesAttack.h  EnemiesDead.cpp  EnemiesDead.h  EnemiesIdle.cpp  EnemiesIdle.h  EnemiesStateBase.h  EnemiesWalk.cpp  EnemiesWalk.h
Classes/CharacterState/PlayerCharacterState/: PlayerCharacterAttack.cpp  PlayerCharacterAttack.h  PlayerCharacterDead.cpp  PlayerCharacterIdle.cpp  PlayerCharacterIdle.h  PlayerCharacterSelect.cpp  PlayerCharacterWalk.cpp
Classes/Enemies/: Enemy.h  EnemyFactory.cpp  EnemyFactory.h
Classes/Enemies/ShadowLord/: ShadowLord.h
Classes/Enemies/Skeleton/: Skeleton.cpp  Skeleton.h
Classes/Enemies/Slime/: Slime.cpp  Slime.h
Classes/Engine/: Engine.cpp  Engine.h
Classes/Equipment/: BaseEquipment.cpp  BaseEquipment.h  EquipmentFactory.cpp  EquipmentFactory.h
Classes/Equipment/Type/Armor/: ChippedArmor.cpp
Classes/Equipment/Type/Shoe/: ChippedShoe.h
Classes/Equipment/Type/Weapon/: ChippedSword.cpp  ChippedSword.h
Classes/Game/: Game.cpp  Game.h
Classes/Inventory/: Inventory.cpp  Inventory.h  InventoryNode.cpp  InventoryNode.h
Classes/MapDecoration/: BloodMoonTower.cpp  MapDecoration.cpp  MapDecoration.h  Obelisk.cpp
Classes/PlayerCharacters/: PlayerCharacter.cpp  PlayerCharacter.h  PlayerCharacterFactory.cpp  PlayerCharacterFactory.h
Classes/PlayerCharacters/Fighter/: Fighter.cpp  Fighter.h
Classes/PlayerCharacters/Knight/: Knight.cpp  Knight.h
Classes/PlayerCharacters/Warrior/: Warrior.cpp  Warrior.h
Classes/Skills/: SkillBase.cpp  SkillBase.h  SkillFactory.cpp  SkillFactory.h  SkillTree.cpp  SkillTree.h
Classes/Skills/AOESkill/: AOESkill.cpp  AOESkill.h  AOESkill1.cpp  AOESkill1.h  AOESkill2.cpp  AOESkill2.h  DarkHole.cpp  DarkHole.h  ElectricArea.cpp  ElectricArea.h  FireFlower.cpp  FireFlower.h  IllumiArea.cpp  IllumiArea.h  RumbleArea.cpp  RumbleArea.h  ShadowArea.cpp  ShadowArea.h  UltimateIllumiPower.cpp  UltimateIllumiPower.h
Classes/Skills/BuffSkill/: BuffSkill.cpp  BuffSkill.h  BuffSkill1.cpp  BuffSkill1.h  BuffSkill2.cpp  BuffSkill2.h  FireHurricane.cpp  FireHurricane.h  FireShield.cpp  FireShield.h  HealingBuff.cpp  HealingBuff.h  IllumiShield.cpp  IllumiShield.h  ShadowShield.cpp  ShadowShield.h
Classes/Skills/SkillShot/: DarkBall.cpp  DarkBall.h  DarkSpear.cpp  DarkSpear.h  FireBall.cpp  FireBall.h  IllumiBall.cpp  IllumiBall.h  IllumiWave.cpp  IllumiWave.h  ShadowHurricane.cpp  ShadowHurricane.h  ShadowWave.cpp  ShadowWave.h  SkillShot.cpp  SkillShot.h  SkillShot1.cpp  SkillShot1.h  SkillShot2.cpp  SkillShot2.h
Classes/Skills/TargetSkill/: TargetSkill.cpp  TargetSkill.h  TargetSkill1.cpp  TargetSkill1.h  TargetSkill2.cpp  TargetSkill2.h
Classes/State/BossState/: BossAttack.cpp  BossDead.cpp  BossGetHit.cpp  BossIdle.cpp  BossRoar.cpp  BossRun.cpp  BossWalk.cpp
Classes/State/EnemiesState/: EnemiesAttack.cpp  EnemiesAttack.h  EnemiesDead.cpp  EnemiesDead.h  EnemiesIdle.cpp  EnemiesIdle.h  EnemiesStateBase.h  EnemiesWalk.cpp  EnemiesWalk.h
Classes/State/PlayerCharacterState/: PlayerCharacterAttack.cpp  PlayerCharacterDead.cpp  PlayerCharacterDead.h  PlayerCharacterIdle.cpp  PlayerCharacterSelect.cpp  PlayerCharacterSelect.h  PlayerCharacterStateBase.h  PlayerCharacterWalk.cpp  PlayerCharacterWalk.h
Classes/UserInterface/InGame/: HealthBar.h  InGameUI.cpp  InGameUI.h  InventoryButton.cpp  InventoryButton.h  Joystick.cpp  Joystick.h  JoystickSkill.cpp  JoystickSkill.h  Minimap.cpp  Minimap.h  SkillButton.cpp  SkillButton.h  TalentButton.cpp  TalentButton.h  TalentCarousel.cpp  TalentCarousel.h
Resources/boss/HellBeast/HellBeastAttack1/hellbeast_attack1_NEE/: hellbeast_attack1_NEE.plist
Resources/map/: BossRoom1.tmx  Infernus_Bones.tsx  Infernus_Corpse.tsx  Infernus_Ground.tsx  Map0.tmx  Map1.tmx  bones1.tsx  bones2.tsx  bones3.tsx  bricks.tsx  cabin.tsx  column.tsx  flame.tsx  flames.tsx  ground_darken.tsx  ground_stone1.tsx  ground_variation1.tsx  ground_variation2.tsx  map0.tiled-session  mushrooms.tsx  pipo-mapeffect013.tsx  rocks.tsx  spritesheet.tsx  subservient_special_working version 1.tsx  subservient_special_working version 2.tsx  subservient_special_worship ver 1.tsx  subservient_special_worship ver 2.tsx  tiles.tsx  torch.tsx  wall.tsx  worldOfSins.tmx
Resources/map/Interactive Object/Obelisk/: Flying_Obelisk.plist  Obelisk.plist
Resources/map/The World Of Sins/: Ground_moss.tsx  Objects.tsx  Water_coasts.tsx  Water_under_objects.tsx  details.tsx  theWorldOfSins.tiled-session  theWorldOfSins.tmx  water_detilazation.tsx  water_detilazation_v2.tsx  waterfall.tsx
Resources/map/prop/Corpse/: Infernus_Corpse.plist
Resources/map/prop/bones1/: Infernus_Bones.plist
Resources/map/prop/teleport/: teleport_effects.plist
Resources/map/vfx/flame/: torchFlame.plist
Resources/map/vfx/flames/: flames.plist
Resources/skill/SkillSprite/darkpower/: darkpower.plist
Resources/skill/SkillSprite/fireball/: fireball.plist
Resources/skill/SkillSprite/thunder/: thunder.plist
Resources/skill/SkillSprite/zhonya/: zhonya.plist
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.ios_mac/mac/: Info.plist
(+395 files in other folders)
